--- a/viewer03.html
+++ b/viewer03.html
@@ -367,8 +367,8 @@ function drawChart(){
     data:{ datasets },
     options:{
       maintainAspectRatio:false,
-      parsing:false,
-      interaction:{mode:"nearest",axis:"x",intersect:true},
+      parsing:true,
+      interaction:{mode:"index",intersect:false},
       plugins:{
         legend:{
           labels:{color:getCSSVar("--text")}
@@ -392,11 +392,12 @@ function drawChart(){
         }
       },
       scales:{
-        x:{
-          type:"time",
-          time:{unit:"day",tooltipFormat:"dd/MM/yyyy",stepSize:1},
-          offset:false,
-          stacked:true,
+x:{
+  type:"time",
+  time:{unit:"day",tooltipFormat:"dd/MM/yyyy",stepSize:1},
+  offset:true,
+  stacked:false,
+
           ticks:{
             autoSkip:false,
             callback:(value)=>{
